gcc/testsuite/sarif-replay.dg/2.1.0-invalid/3.27.10-bad-level.sarif
{
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "foo"
        }
      },
      "results": [
        {
	  "level": "mostly harmless", /* { dg-error "unrecognized value for 'level': 'mostly harmless' \\\[SARIF v2.1.0 ยง3.27.10\\\]" } */
          "message": {
            "text": "bar"
          }
        }
      ]
    }
  ]
}

/* { dg-begin-multiline-output "" }
   12 |           "level": "mostly harmless",
      |                    ^~~~~~~~~~~~~~~~~
   { dg-end-multiline-output "" } */
